# vaultwarden-web-vault-deb

./: '  .browserslistrc  .editorconfig  .eslintignore  .eslintrc.json  .git-blame-ignore-revs  .gitignore  .gitmodules  .npmrc  .prettierignore  .prettierrc.json  CLAUDE.md  CONTRIBUTING.md  ISSUE_TEMPLATE.md  README.md  angular.json  appveyor.yml  azure-pipelines.yml  babel.config.json  clients.code-workspace  crowdin.yml  eslint.config.mjs  gulpfile.js  jest.config.js  karma.conf.js  lint-staged.config.mjs  nx.json  package-lock.json  package.json  renovate.json  solarized.scss  tailwind.config.js  tsconfig.base.json  tsconfig.eslint.json  tsconfig.json  webpack.config.js
.checkmarx/: config.yml
apps/desktop/desktop_native/: .gitignore  Cargo.toml  build.js  clippy.toml  deny.toml  index.d.ts  index.js  package.json
apps/desktop/desktop_native/autotype/: Cargo.toml
apps/desktop/desktop_native/autotype/src/: lib.rs  linux.rs  macos.rs  windows.rs
apps/desktop/desktop_native/autotype/src/windows/: mod.rs  type_input.rs  window_title.rs
apps/desktop/desktop_native/bitwarden_chromium_import_helper/: Cargo.toml  build.rs  resources.rc
apps/desktop/desktop_native/bitwarden_chromium_import_helper/src/: main.rs  windows.rs
apps/desktop/desktop_native/bitwarden_chromium_import_helper/src/windows/: config.rs  crypto.rs  impersonate.rs  log.rs  main.rs  mod.rs
apps/desktop/desktop_native/bitwarden_chromium_importer/: Cargo.toml  README.md
apps/desktop/desktop_native/bitwarden_chromium_importer/src/: chromium.rs  crypto.rs  lib.rs  linux.rs  macos.rs  metadata.rs  util.rs  windows.rs
apps/desktop/desktop_native/chromium_importer/: Cargo.toml  README.md  build.rs  config_constants.rs
apps/desktop/desktop_native/chromium_importer/src/: lib.rs  metadata.rs  util.rs
apps/desktop/desktop_native/chromium_importer/src/chromium/: mod.rs
apps/desktop/desktop_native/chromium_importer/src/chromium/platform/: linux.rs  macos.rs  mod.rs  windows.rs
apps/desktop/desktop_native/chromium_importer/src/chromium/platform/windows/: abe.rs  abe_config.rs  crypto.rs  mod.rs  signature.rs
apps/desktop/desktop_native/core/: Cargo.toml
apps/desktop/desktop_native/core/src/: clipboard.rs  error.rs  lib.rs
apps/desktop/desktop_native/core/src/autofill/: macos.rs  mod.rs  unix.rs  windows.rs
apps/desktop/desktop_native/core/src/autostart/: linux.rs  mod.rs  unimplemented.rs
apps/desktop/desktop_native/core/src/biometric/: macos.rs  mod.rs  unimplemented.rs  unix.rs  windows.rs  windows_focus.rs
apps/desktop/desktop_native/core/src/biometric_v2/: linux.rs  mod.rs  unimplemented.rs  windows.rs  windows_focus.rs
apps/desktop/desktop_native/core/src/crypto/: crypto.rs  mod.rs
apps/desktop/desktop_native/core/src/ipc/: client.rs  mod.rs  server.rs
apps/desktop/desktop_native/core/src/password/: macos.rs  mod.rs  unix.rs  windows.rs
apps/desktop/desktop_native/core/src/powermonitor/: linux.rs  mod.rs  unimplemented.rs
apps/desktop/desktop_native/core/src/process_isolation/: linux.rs  macos.rs  mod.rs  windows.rs
apps/desktop/desktop_native/core/src/secure_memory/: dpapi.rs  encrypted_memory_store.rs  mod.rs
apps/desktop/desktop_native/core/src/secure_memory/secure_key/: crypto.rs  dpapi.rs  keyctl.rs  memfd_secret.rs  mlock.rs  mod.rs
apps/desktop/desktop_native/core/src/ssh_agent/: generator.rs  importer.rs  mod.rs  named_pipe_listener_stream.rs  peercred_unix_listener_stream.rs  request_parser.rs  unix.rs  windows.rs
apps/desktop/desktop_native/core/src/ssh_agent/peerinfo/: gather.rs  mod.rs  models.rs
apps/desktop/desktop_native/core/src/ssh_agent/test_keys/: ecdsa_openssh_unencrypted  ecdsa_openssh_unencrypted.pub  ed25519_openssh_encrypted  ed25519_openssh_encrypted.pub  ed25519_openssh_unencrypted  ed25519_openssh_unencrypted.pub  ed25519_pkcs8_unencrypted  ed25519_pkcs8_unencrypted.pub  ed25519_putty_openssh_unencrypted  rsa_openssh_encrypted  rsa_openssh_encrypted.pub  rsa_openssh_unencrypted  rsa_openssh_unencrypted.pub  rsa_pkcs8_encrypted  rsa_pkcs8_encrypted.pub  rsa_pkcs8_unencrypted  rsa_pkcs8_unencrypted.pub  rsa_putty_openssh_unencrypted  rsa_putty_pkcs1_unencrypted
apps/desktop/desktop_native/macos_provider/: .gitignore  Cargo.toml  README.md  build.sh  uniffi.toml
apps/desktop/desktop_native/macos_provider/src/: assertion.rs  lib.rs  registration.rs
apps/desktop/desktop_native/napi/: Cargo.toml  build.js  index.d.ts  index.js  package.json
apps/desktop/desktop_native/napi/scripts/: build.js
apps/desktop/desktop_native/napi/src/: lib.rs
apps/desktop/desktop_native/napi/src/passkey_authenticator_internal/: dummy.rs  windows.rs
apps/desktop/desktop_native/napi/src/registry/: dummy.rs  mod.rs  windows.rs
apps/desktop/desktop_native/objc/: Cargo.toml  build.rs
apps/desktop/desktop_native/objc/src/: lib.rs
apps/desktop/desktop_native/objc/src/native/: .clangd  interop.h  interop.m  run_command.m  utils.h  utils.m
apps/desktop/desktop_native/objc/src/native/autofill/: run_autofill_command.h  run_autofill_command.m
apps/desktop/desktop_native/objc/src/native/autofill/commands/: status.h  status.m  sync.h  sync.m
apps/desktop/desktop_native/process_isolation/: Cargo.toml  test_isolation.sh
apps/desktop/desktop_native/process_isolation/src/: lib.rs
apps/desktop/desktop_native/proxy/: Cargo.toml
apps/desktop/desktop_native/proxy/src/: main.rs  windows.rs
apps/desktop/desktop_native/src/: clipboard.rs  lib.rs
apps/desktop/desktop_native/src/biometric/: macos.rs  mod.rs  unix.rs  windows.rs
apps/desktop/desktop_native/src/crypto/: cipher_string.rs  crypto.rs
apps/desktop/desktop_native/src/password/: windows.rs
apps/desktop/desktop_native/windows-plugin-authenticator/: Cargo.toml  README.md  build.rs  pluginauthenticator.hpp
apps/desktop/desktop_native/windows-plugin-authenticator/src/: lib.rs  pa.rs
apps/desktop/desktop_native/windows_plugin_authenticator/: Cargo.toml  README.md  build.rs
apps/desktop/desktop_native/windows_plugin_authenticator/src/: lib.rs  pa.rs  pluginauthenticator.rs  webauthn.rs
(+11162 files in other folders)
