[workspace]
resolver = "2"
members = ["napi", "core", "proxy", "macos_provider", "windows-plugin-authenticator"]

[workspace.package]
version = "0.0.0"
license = "GPL-3.0"
edition = "2021"
publish = false

[workspace.dependencies]
anyhow = "=1.0.94"
log = "=0.4.25"
serde = "=1.0.209"
serde_json = "=1.0.127"
tokio = "=1.43.0"
tokio-util = "=0.7.13"
tokio-stream = "=0.1.15"
thiserror = "=1.0.69"
