[package]
name = "bitwarden_chromium_import_helper"
version.workspace = true
license.workspace = true
edition.workspace = true
publish.workspace = true

[dependencies]

[target.'cfg(target_os = "windows")'.dependencies]
chromium_importer = { path = "../chromium_importer" }
clap = { version = "=4.5.40", features = ["derive"] }
scopeguard = { workspace = true }
sysinfo = { workspace = true }
windows = { workspace = true, features = [
    "Wdk_System_SystemServices",
    "Win32_Security_Cryptography",
    "Win32_Security",
    "Win32_Storage_FileSystem",
    "Win32_System_IO",
    "Win32_System_Memory",
    "Win32_System_Pipes",
    "Win32_System_ProcessStatus",
    "Win32_System_Services",
    "Win32_System_Threading",
    "Win32_UI_Shell",
    "Win32_UI_WindowsAndMessaging",
] }
anyhow = { workspace = true }
base64 = { workspace = true }
tokio = { workspace = true, features = ["full"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

[build-dependencies]
embed-resource = "=3.0.6"

[lints]
workspace = true
