[package]
name = "bitwarden_chromium_import_helper"
version.workspace = true
license.workspace = true
edition.workspace = true
publish.workspace = true

[dependencies]

[target.'cfg(target_os = "windows")'.dependencies]
aes-gcm = { workspace = true }
chacha20poly1305 = { workspace = true }
chromium_importer = { path = "../chromium_importer" }
clap = { version = "=4.5.51", features = ["derive"] }
scopeguard = { workspace = true }
sysinfo = { workspace = true }
windows = { workspace = true, features = [
    "Win32_System_Pipes",
] }
anyhow = { workspace = true }
base64 = { workspace = true }
tokio = { workspace = true, features = ["full"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

[build-dependencies]
embed-resource = "=3.0.6"

[lints]
workspace = true
