[package]
name = "macos_provider"
edition = { workspace = true }
license = { workspace = true }
version = { workspace = true }
publish = { workspace = true }

[[bin]]
name = "uniffi-bindgen"
path = "uniffi-bindgen.rs"

[lib]
crate-type = ["staticlib", "cdylib"]
bench = false

[dependencies]
desktop_core = { path = "../core" }
futures = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["sync"] }
tokio-util = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
uniffi = { workspace = true, features = ["cli"] }

[target.'cfg(target_os = "macos")'.dependencies]
tracing-oslog = "0.3.0"

[build-dependencies]
uniffi = { workspace = true, features = ["build"] }

[lints]
workspace = true
