[package]
name = "desktop_objc"
edition = { workspace = true }
license = { workspace = true }
version = { workspace = true }
publish = { workspace = true }

[features]
default = []

[dependencies]
anyhow = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }

[target.'cfg(target_os = "macos")'.dependencies]
core-foundation = "=0.10.1"

[build-dependencies]
cc = "=1.2.4"
glob = "=0.3.2"

[lints]
workspace = true
