[package]
name = "desktop_objc"
edition = { workspace = true }
license = { workspace = true }
version = { workspace = true }
publish = { workspace = true }

[features]
default = []

[target.'cfg(target_os = "macos")'.dependencies]
anyhow = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }

[target.'cfg(target_os = "macos")'.build-dependencies]
cc = "=1.2.4"
glob = "=0.3.2"

[lints]
workspace = true
