[package]
name = "process_isolation"
edition = { workspace = true }
license = { workspace = true }
version = { workspace = true }
publish = { workspace = true }

[lib]
crate-type = ["cdylib"]

[dependencies]
ctor = { workspace = true }
desktop_core = { path = "../core" }
libc = { workspace = true }
