[package]
name = "desktop_proxy"
edition = { workspace = true }
license = { workspace = true }
version = { workspace = true }
publish = { workspace = true }

[dependencies]
anyhow = { workspace = true }
desktop_core = { path = "../core" }
futures = "=0.3.31"
log = { workspace = true }
simplelog = "=0.12.2"
tokio = { workspace = true, features = ["io-std", "io-util", "macros", "rt"] }
tokio-util = { workspace = true, features = ["codec"] }

[target.'cfg(target_os = "macos")'.dependencies]
embed_plist = "=1.2.2"
