[package]
name = "desktop_proxy"
edition = { workspace = true }
license = { workspace = true }
version = { workspace = true }
publish = { workspace = true }

[dependencies]
anyhow = { workspace = true }
desktop_core = { path = "../core" }
futures = { workspace = true }
log = { workspace = true }
simplelog = { workspace = true }
tokio = { workspace = true, features = ["io-std", "io-util", "macros", "rt"] }
tokio-util = { workspace = true, features = ["codec"] }

[target.'cfg(target_os = "macos")'.dependencies]
embed_plist = { workspace = true }

[lints]
workspace = true
